# kabupilot-3

./: .gitignore  AGENTS.md  README.md  pyproject.toml  specification.md
backend/: requirements.txt
backend/kabupilot/: __init__.py  agents.py  cli.py  config.py  db.py  knowledge.py  llm.py  repository.py
backend/kabupilot/data/: knowledge_base_jp.json
backend/kabupilot_backend/: __init__.py  main.py  workflow.py
backend/kabupilot_backend/agents/: checker.py  dicider.py  explorer.py  planner.py  portfolio_updater.py  research_leader.py  researcher.py
backend/kabupilot_backend/core/: base_agent.py  types.py
backend/kabupilot_backend/services/: data_providers.py
backend/kabupilot_backend/tools/: external.py  knowledge_base.py
kabupilot/: knowledge.py  models.py
kabupilot/data/: knowledge_base.json
