[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kabupilot-backend"
version = "0.1.0"
description = "Backend prototype for an automated stock portfolio system"
authors = [{ name = "Kabupilot" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["backend"]
